--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
         }
     },
     "scripts": {
-        "test": "vendor/bin/phpunit --verbose"
+        "test": "vendor/bin/phpunit"
     },
     "config": {
         "sort-packages": true
