--- a/.travis.yml
+++ b/.travis.yml
@@ -8,25 +8,25 @@ matrix:
     fast_finish: true
     include:
         - php: 7.2
-          env: LARAVEL='5.8.*' TESTBENCH='3.8.*' COMPOSER_FLAGS='--prefer-lowest'
+          env: LARAVEL='5.8.*' TESTBENCH='3.8.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-lowest'
         - php: 7.2
-          env: LARAVEL='5.8.*' TESTBENCH='3.8.*' COMPOSER_FLAGS='--prefer-stable'
+          env: LARAVEL='5.8.*' TESTBENCH='3.8.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-stable'
         - php: 7.3
-          env: LARAVEL='5.8.*' TESTBENCH='3.8.*' COMPOSER_FLAGS='--prefer-lowest'
+          env: LARAVEL='5.8.*' TESTBENCH='3.8.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-lowest'
         - php: 7.3
-          env: LARAVEL='5.8.*' TESTBENCH='3.8.*' COMPOSER_FLAGS='--prefer-stable'
+          env: LARAVEL='5.8.*' TESTBENCH='3.8.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-stable'
         - php: 7.2
-          env: LARAVEL='6.*' TESTBENCH='4.*' COMPOSER_FLAGS='--prefer-lowest'
+          env: LARAVEL='6.*' TESTBENCH='4.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-lowest'
         - php: 7.2
-          env: LARAVEL='6.*' TESTBENCH='4.*' COMPOSER_FLAGS='--prefer-stable'
+          env: LARAVEL='6.*' TESTBENCH='4.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-stable'
         - php: 7.3
-          env: LARAVEL='6.*' TESTBENCH='4.*' COMPOSER_FLAGS='--prefer-lowest'
+          env: LARAVEL='6.*' TESTBENCH='4.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-lowest'
         - php: 7.3
-          env: LARAVEL='6.*' TESTBENCH='4.*' COMPOSER_FLAGS='--prefer-stable'
+          env: LARAVEL='6.*' TESTBENCH='4.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-stable'
 
 before_install:
     - travis_retry composer self-update
-    - travis_retry composer require --no-update --no-interaction "illuminate/support:${LARAVEL}" "orchestra/testbench:${TESTBENCH}"
+    - travis_retry composer require --no-update --no-interaction "illuminate/support:${LARAVEL}" "orchestra/testbench:${TESTBENCH}" "bensampo/laravel-enum:${PHPENUM}"
 
 install:
     - travis_retry composer update ${COMPOSER_FLAGS} --prefer-dist --no-interaction --no-suggest
