--- a/.travis.yml
+++ b/.travis.yml
@@ -8,21 +8,21 @@ matrix:
     fast_finish: true
     include:
         - php: 7.2
-          env: LARAVEL='5.8.*' TESTBENCH='3.8.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-lowest'
+          env: LARAVEL='5.7.*' TESTBENCH='3.8.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-lowest'
         - php: 7.2
-          env: LARAVEL='5.8.*' TESTBENCH='3.8.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-stable'
+          env: LARAVEL='5.7.*' TESTBENCH='3.8.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-stable'
         - php: 7.3
-          env: LARAVEL='5.8.*' TESTBENCH='3.8.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-lowest'
+          env: LARAVEL='5.7.*' TESTBENCH='3.8.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-lowest'
         - php: 7.3
-          env: LARAVEL='5.8.*' TESTBENCH='3.8.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-stable'
-        - php: 7.2
-          env: LARAVEL='6.*' TESTBENCH='4.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-lowest'
-        - php: 7.2
-          env: LARAVEL='6.*' TESTBENCH='4.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-stable'
-        - php: 7.3
-          env: LARAVEL='6.*' TESTBENCH='4.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-lowest'
-        - php: 7.3
-          env: LARAVEL='6.*' TESTBENCH='4.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-stable'
+          env: LARAVEL='5.7.*' TESTBENCH='3.8.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-stable'
+        # - php: 7.2
+        #   env: LARAVEL='5.8.*' TESTBENCH='4.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-lowest'
+        # - php: 7.2
+        #   env: LARAVEL='5.8.*' TESTBENCH='4.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-stable'
+        # - php: 7.3
+        #   env: LARAVEL='5.8.*' TESTBENCH='4.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-lowest'
+        # - php: 7.3
+        #   env: LARAVEL='5.8.*' TESTBENCH='4.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-stable'
 
 before_install:
     - travis_retry composer self-update
