--- a/.travis.yml
+++ b/.travis.yml
@@ -7,18 +7,22 @@ cache:
 matrix:
     fast_finish: true
     include:
+        - php: 7.1
+          env: LARAVEL='5.7.*' TESTBENCH='3.7.*' PHPENUM='1.*' PHPUNIT='7.*' COMPOSER_FLAGS='--prefer-stable'
         - php: 7.2
-          env: LARAVEL='5.7.*' TESTBENCH='3.7.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-stable'
+          env: LARAVEL='5.7.*' TESTBENCH='3.7.*' PHPENUM='1.*' PHPUNIT='7.*' COMPOSER_FLAGS='--prefer-stable'
         - php: 7.3
-          env: LARAVEL='5.7.*' TESTBENCH='3.7.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-lowest'
+          env: LARAVEL='5.7.*' TESTBENCH='3.7.*' PHPENUM='1.*' PHPUNIT='7.*' COMPOSER_FLAGS='--prefer-lowest'
+        - php: 7.1
+          env: LARAVEL='5.8.*' TESTBENCH='3.8.*' PHPENUM='1.*' PHPUNIT='8.*' COMPOSER_FLAGS='--prefer-stable'
         - php: 7.2
-          env: LARAVEL='5.8.*' TESTBENCH='3.8.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-stable'
+          env: LARAVEL='5.8.*' TESTBENCH='3.8.*' PHPENUM='1.*' PHPUNIT='8.*' COMPOSER_FLAGS='--prefer-stable'
         - php: 7.3
-          env: LARAVEL='5.8.*' TESTBENCH='4.8.*' PHPENUM='1.*' COMPOSER_FLAGS='--prefer-lowest'
+          env: LARAVEL='5.8.*' TESTBENCH='3.8.*' PHPENUM='1.*' PHPUNIT='8.*' COMPOSER_FLAGS='--prefer-lowest'
 
 before_install:
     - travis_retry composer self-update
-    - travis_retry composer require --no-update --no-interaction "illuminate/support:${LARAVEL}" "orchestra/testbench:${TESTBENCH}" "bensampo/laravel-enum:${PHPENUM}"
+    - travis_retry composer require --no-update --no-interaction "illuminate/support:${LARAVEL}" "orchestra/testbench:${TESTBENCH}" "bensampo/laravel-enum:${PHPENUM}" "phpunit/phpunit:${PHPUNIT}"
 
 install:
     - travis_retry composer update ${COMPOSER_FLAGS} --prefer-dist --no-interaction --no-suggest
