--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,14 @@
 language: php
 
+php:
+    - 7.2
+
 cache:
     directories:
         - $HOME/.composer/cache
 
 matrix:
     fast_finish: true
-    include:
-        - php: 7.2
-          env: LARAVEL='5.7.*' TESTBENCH='3.7.*' PHPENUM='1.*' PHPUNIT='7.*' COMPOSER_FLAGS='--prefer-stable'
-        - php: 7.3
-          env: LARAVEL='5.7.*' TESTBENCH='3.7.*' PHPENUM='1.*' PHPUNIT='7.*' COMPOSER_FLAGS='--prefer-lowest'
-        - php: 7.2
-          env: LARAVEL='5.8.*' TESTBENCH='3.8.*' PHPENUM='1.*' PHPUNIT='8.*' COMPOSER_FLAGS='--prefer-stable'
-        - php: 7.3
-          env: LARAVEL='5.8.*' TESTBENCH='3.8.*' PHPENUM='1.*' PHPUNIT='8.*' COMPOSER_FLAGS='--prefer-lowest'
 
 before_install:
     - travis_retry composer self-update
