--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     ],
     "require": {
         "php": "^7.1",
-        "illuminate/support": "~5.7.0|^6.0",
+        "illuminate/support": "^5.5|^6.0",
         "bensampo/laravel-enum": "^1.0"
     },
     "require-dev": {
