--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,9 @@
         }
     ],
     "require": {
-        "php": "^7.1",
-        "illuminate/support": "^5.5|^6.0|^7.0",
-        "bensampo/laravel-enum": "^1.0"
+        "php": ">=7.1",
+        "illuminate/support": "^5.5|^6.0|^7.0|^8.0|^9.0|^10.0",
+        "bensampo/laravel-enum": "^1.0|^2.0|^3.0|^4.0|5.0|^6.0"
     },
     "require-dev": {
         "orchestra/testbench": "~3.7.0|^4.0",
